# sbom-unifier

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
docs/: adding-tools.md  architecture.md  development.md  usage.md
src/sbom_unifier/: __init__.py  __main__.py  cli.py  clone.py  config.py  pipeline.py
src/sbom_unifier/analyze/: __init__.py  analyzer.py  spdx_fields.py  utils.py
src/sbom_unifier/enrichment/: __init__.py  file_types.py  ninka.py
src/sbom_unifier/merge/: fields.py  merger.py  utils.py
src/sbom_unifier/tools/: __init__.py  github.py  manual.py  registry.py  sbom_tool.py  syft.py  trivy.py
src/sbom_unifier/web/: app.py  db.py  jobs.py
src/sbom_unifier/web/templates/: base.html  index.html  job.html  job_statistics.html  jobs.html
tests/: conftest.py  test_analyzer.py  test_cli.py  test_clone.py  test_db.py  test_enrichment.py  test_merger.py  test_pipeline.py  test_registry.py  test_semantic.py  test_snapshot.py  test_web.py
tests/fixtures/tiny-project/expected/: unified_sbom.json
tests/fixtures/tiny-project/inputs/: custom-sbom.json  dependency-graph-sbom.json  manifest.spdx.json  syft-sbom.json  trivy-sbom.json
