[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sbom-unifier"
version = "0.1.0"
description = "Generate, merge, enrich, and analyze SPDX SBOMs from a GitHub URL via CLI or Web UI."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.13"
authors = [{ name = "moriwaki" }]
classifiers = [
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
    "Flask>=3.0",
    "python-dotenv>=1.0",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-flask>=1.3",
    "responses>=0.25",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
sbom-unifier = "sbom_unifier.cli:main"
sbom-unifier-web = "sbom_unifier.web.app:run"

[tool.setuptools.packages.find]
where = ["src"]
include = ["sbom_unifier*"]

[tool.setuptools.package-data]
sbom_unifier = ["web/templates/*.html", "web/static/*"]

# Coverage threshold is set to 55% to reflect the reality of the carve-out:
# tool generators (subprocess wrappers) and Web routes have minimal unit-test coverage
# and rely on the snapshot/semantic test suite for end-to-end validation.
# Raise this threshold over time as more targeted tests are added.
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --cov=sbom_unifier --cov-fail-under=55"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]

[tool.mypy]
python_version = "3.13"
strict = false
warn_unused_ignores = true
check_untyped_defs = true
ignore_missing_imports = true
